fix(game): fix HoF take photo button spacing that was wrong since another update

--- a/HallOfFame/UI/src/game/take-hof-picture-button.module.scss
+++ b/HallOfFame/UI/src/game/take-hof-picture-button.module.scss
@@ -1,11 +1,17 @@
 ﻿.screenshot-button {
     position: relative;
     display: block;
-    margin-right: calc(22rem) !important;
+    // Override vanilla width to make room for the 90° rotated HoF side label.
+    // 32rem is the original margin, we add 1em for the text.
+    // We do not want to be exact actually, this is the kind of thing to adjust
+    // by eyeballing.
+    width: calc(32rem + 1em - 2rem) !important;
 
     > [class*="icon"] {
         //noinspection CssUnknownTarget
         mask-image: url(coui://uil/Standard/SharePicture.svg);
+        // Dock icon to left to adjust for the increased width.
+        mask-position: 0 50%;
     }
 
     span {
